--- a/GoogleVoice.properties
+++ b/GoogleVoice.properties
@@ -1,7 +1,8 @@
-﻿# 1. Make a copy of this file in the same package, filename has to be privateTestData.properties
-# 2. edit your settings in that file.
-# 3. privateTestData.properties is in the ignore list, DO NOT CHECK IN THAT FILE!
-username=joe.kluchinski@gmail.com
-password=xsvmzzhxfgnegzbz 
+# 1. This filename must stay GoogleVoice.properties
+# 2. Enter your username and password into fields
+# 3. For your password I suggest using an application specific password (2-step verification people must use this)
+# 4. I'm working on another password method, this will have to do for now.
+username=joe.smith@gmail.com
+password=aegsawrhwag 
 connectOnStartup=true
 jsonData=
