If properties file cannot be found one will be made.

--- a/GoogleVoice.properties
+++ b/GoogleVoice.properties
@@ -2,7 +2,5 @@
 # 2. Enter your username and password into fields
 # 3. For your password I suggest using an application specific password (2-step verification people must use this)
 # 4. I'm working on another password method, this will have to do for now.
-username=joe.smith@gmail.com
-password=aegsawrhwag 
-connectOnStartup=true
-jsonData=
+username=username
+password=password 
